--- a/apps/platform/project.json
+++ b/apps/platform/project.json
@@ -6,9 +6,7 @@
   "targets": {
     "build": {
       "executor": "@nx/webpack:webpack",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
         "target": "node",
@@ -16,17 +14,13 @@
         "outputPath": "dist/apps/platform",
         "main": "apps/platform/src/app/main.ts",
         "tsConfig": "apps/platform/tsconfig.app.json",
+        "generatePackageJson": true,
         "tsPlugins": [
           {
             "name": "@nestjs/swagger/plugin",
             "options": {
-              "dtoFileNameSuffix": [
-                ".entity.ts",
-                ".dto.ts"
-              ],
-              "controllerFileNameSuffix": [
-                ".controller.ts"
-              ],
+              "dtoFileNameSuffix": [".entity.ts", ".dto.ts"],
+              "controllerFileNameSuffix": [".controller.ts"],
               "classValidatorShim": true,
               "dtoKeyOfComment": "description",
               "controllerKeyOfComment": "description",
@@ -71,20 +65,14 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/platform/**/*.ts"
-        ]
+        "lintFilePatterns": ["apps/platform/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{projectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
         "jestConfig": "apps/platform/jest.config.ts",
         "passWithNoTests": true
@@ -96,12 +84,22 @@
         }
       }
     },
-    "generate-client": {
-      "executor": "nx:run-commands",
+    "container": {
+      "executor": "@nx-tools/nx-container:build",
+      "dependsOn": ["build"],
       "options": {
-        "commands": [
-          "openapi-generator-cli generate -i ./apps/platform/resources/openapi-docs.json -g typescript-axios -o libs/clients/platform-client/src/lib/generated -c ./apps/platform/resources/openapi-server-generator.config.yaml"
-        ]
+        "engine": "docker",
+        "metadata": {
+          "images": ["platform"],
+          "load": true,
+          "tags": [
+            "type=schedule",
+            "type=ref,event=branch",
+            "type=ref,event=tag",
+            "type=ref,event=pr",
+            "type=sha,prefix=sha-"
+          ]
+        }
       }
     }
   },
