feat(platform): basic docker build and newrelic config

--- a/apps/platform/.eslintrc.json
+++ b/apps/platform/.eslintrc.json
@@ -15,6 +15,30 @@
   "overrides": [
     {
       "files": [
+      "{package,project}.json"
+      ],
+      "parser": "jsonc-eslint-parser",
+      "rules": {
+        "@nx/dependency-checks": [
+          "error",
+          {
+            "buildTargets": ["build"],
+            "checkMissingDependencies": true,
+            "checkObsoleteDependencies": true,
+            "checkVersionMismatches": true,
+            "ignoredDependencies": [
+              "tslib",
+              "pg",
+              "reflect-metadata",
+              "rxjs",
+              "pino-http"
+            ]
+          }
+        ]
+      }
+    },
+    {
+      "files": [
         "*.ts",
         "*.tsx",
         "*.js",
