--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@softkit/source",
-  "version": "3.6.3",
+  "version": "1.0.0",
   "license": "MIT",
   "private": true,
   "engines": {
@@ -18,12 +18,12 @@
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@commitlint/config-nx-scopes": "^17.6.4",
-    "@docusaurus/eslint-plugin": "^2.4.1",
-    "@docusaurus/module-type-aliases": "2.4.1",
     "@faker-js/faker": "^8.0.2",
     "@jscutlery/semver": "^3.1.0",
     "@nestjs/schematics": "^10.0.2",
     "@nestjs/testing": "^10.2.4",
+    "@nx-tools/container-metadata": "^5.1.0",
+    "@nx-tools/nx-container": "^5.1.0",
     "@nx/eslint-plugin": "16.8.1",
     "@nx/jest": "16.8.1",
     "@nx/js": "16.8.1",
