build(platform): added proper docker image build locally

--- a/apps/platform/.eslintrc.json
+++ b/apps/platform/.eslintrc.json
@@ -31,7 +31,8 @@
               "pg",
               "reflect-metadata",
               "rxjs",
-              "pino-http"
+              "pino-http",
+              "pino-pretty"
             ]
           }
         ]
