--- a/apps/platform/package.json
+++ b/apps/platform/package.json
@@ -10,6 +10,7 @@
     "@softkit/logger": "^0.0.7",
     "@softkit/swagger-utils": "^0.1.1",
     "pino-http": "^8.5.0",
+    "pino-pretty": "^10.2.0",
     "@softkit/i18n": "^0.1.1",
     "@softkit/typeorm": "^0.4.2",
     "@softkit/health-check": "^0.0.7",
@@ -36,7 +37,7 @@
     "@softkit/exceptions": "^0.1.2",
     "@nestjs/passport": "^10.0.1",
     "@softkit/typeorm-service": "^0.0.11",
-    "@nx/webpack": "16.8.1",
+    "@nx/webpack": "^17.1.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
