--- a/apps/platform/src/app/assets/.env-dev.yaml
+++ b/apps/platform/src/app/assets/.env-dev.yaml
@@ -1,5 +1,15 @@
 app:
   port: 8000
 
+swagger:
+  docsOutputPath:
+
+i18:
+  paths:
+    - i18n/
+    - ./node_modules/@softkit/validation/i18n/
+    - ./node_modules/@softkit/exceptions/i18n/
+
+
 db:
   runSeeds: true
