--- a/apps/platform/src/app/assets/.env.yaml
+++ b/apps/platform/src/app/assets/.env.yaml
@@ -49,7 +49,7 @@ i18:
 db:
   type: 'postgres'
   applicationName: ${platformClient.serviceName}
-  host: 'localhost'
+  host: ${DB_HOST:-localhost}
   port: 5432
   username: postgres
   password: postgres
