--- a/package.json
+++ b/package.json
@@ -24,15 +24,15 @@
     "@nestjs/testing": "^10.2.4",
     "@nx-tools/container-metadata": "^5.1.0",
     "@nx-tools/nx-container": "^5.1.0",
-    "@nx/eslint-plugin": "16.8.1",
-    "@nx/jest": "16.8.1",
-    "@nx/js": "16.8.1",
-    "@nx/linter": "16.8.1",
-    "@nx/nest": "16.8.1",
-    "@nx/node": "16.8.1",
-    "@nx/plugin": "16.8.1",
-    "@nx/webpack": "16.8.1",
-    "@nx/workspace": "16.8.1",
+    "@nx/eslint": "17.1.2",
+    "@nx/eslint-plugin": "17.1.2",
+    "@nx/jest": "17.1.2",
+    "@nx/js": "17.1.2",
+    "@nx/nest": "17.1.2",
+    "@nx/node": "17.1.2",
+    "@nx/plugin": "17.1.2",
+    "@nx/webpack": "17.1.2",
+    "@nx/workspace": "17.1.2",
     "@softkit/resource-plugin": "^0.3.1",
     "@softkit/test-utils": "^0.1.2",
     "@testcontainers/postgresql": "^10.2.1",
@@ -51,8 +51,7 @@
     "jest-environment-node": "^29.6.4",
     "jest-extended": "^4.0.2",
     "ngx-deploy-npm": "^7.0.1",
-    "nx": "16.8.1",
-    "nx-cloud": "16.4.0",
+    "nx": "17.1.2",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "source-map-support": "^0.5.21",
@@ -76,7 +75,7 @@
     "@nestjs/swagger": "7.1.10",
     "@nestjs/terminus": "^10.0.1",
     "@nestjs/typeorm": "^10.0.0",
-    "@nx/devkit": "16.8.1",
+    "@nx/devkit": "17.1.2",
     "@saas-buildkit/nestjs-i18n": "11.1.3",
     "@softkit/async-storage": "^0.0.6",
     "@softkit/auth": "^1.0.1",
