--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "postinstall": "husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@commitlint/config-nx-scopes": "^18.3.0",
-    "@faker-js/faker": "^8.0.2",
-    "@jscutlery/semver": "^4.0.0",
-    "@nestjs/schematics": "^10.0.2",
-    "@nestjs/testing": "^10.2.4",
-    "@nx-tools/container-metadata": "^5.1.0",
-    "@nx-tools/nx-container": "^5.1.0",
+    "@commitlint/cli": "17.8.1",
+    "@commitlint/config-conventional": "17.8.1",
+    "@commitlint/config-nx-scopes": "18.4.3",
+    "@faker-js/faker": "8.3.1",
+    "@jscutlery/semver": "4.2.0",
+    "@nestjs/schematics": "10.0.3",
+    "@nestjs/testing": "10.3.0",
+    "@nx-tools/container-metadata": "5.1.0",
+    "@nx-tools/nx-container": "5.1.0",
     "@nx/eslint": "17.1.2",
     "@nx/eslint-plugin": "17.1.2",
     "@nx/jest": "17.1.2",
@@ -35,46 +35,46 @@
     "@nx/workspace": "17.1.2",
     "@softkit/resource-plugin": "^0.6.1",
     "@softkit/test-utils": "^0.1.2",
-    "@testcontainers/postgresql": "^10.2.1",
-    "@types/jest": "^29.5.4",
-    "@types/newrelic": "^9.14.0",
-    "@types/node": "^20.5.9",
-    "@types/opossum": "^8.1.1",
-    "@types/passport-jwt": "^3.0.9",
-    "@types/passport-local": "^1.0.35",
-    "@types/supertest": "^2.0.12",
-    "@types/uuid": "^9.0.3",
+    "@testcontainers/postgresql": "10.4.0",
+    "@types/jest": "29.5.11",
+    "@types/newrelic": "9.14.3",
+    "@types/node": "20.10.6",
+    "@types/opossum": "8.1.6",
+    "@types/passport-jwt": "3.0.13",
+    "@types/passport-local": "1.0.38",
+    "@types/supertest": "2.0.16",
+    "@types/uuid": "9.0.7",
     "eslint": "8.48.0",
-    "husky": "^8.0.3",
-    "jest": "^29.6.4",
-    "jest-environment-jsdom": "^29.6.4",
-    "jest-environment-node": "^29.6.4",
-    "jest-extended": "^4.0.2",
-    "ngx-deploy-npm": "^7.0.1",
+    "husky": "8.0.3",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-environment-node": "29.7.0",
+    "jest-extended": "4.0.2",
+    "ngx-deploy-npm": "7.1.0",
     "nx": "17.1.2",
-    "prettier": "^3.0.3",
-    "rimraf": "^5.0.1",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
-    "testcontainers": "^10.2.1",
-    "ts-jest": "^29.1.1",
-    "ts-loader": "^9.4.4",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
+    "prettier": "3.1.1",
+    "rimraf": "5.0.5",
+    "source-map-support": "0.5.21",
+    "supertest": "6.3.3",
+    "testcontainers": "10.4.0",
+    "ts-jest": "29.1.1",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
     "typescript": "5.2.2",
-    "verdaccio": "^5.26.2"
+    "verdaccio": "5.29.0"
   },
   "dependencies": {
-    "@fastify/helmet": "^11.0.0",
-    "@fastify/static": "^6.11.0",
-    "@nestjs/common": "^10.2.4",
-    "@nestjs/core": "^10.2.4",
-    "@nestjs/jwt": "^10.1.1",
-    "@nestjs/passport": "^10.0.1",
-    "@nestjs/platform-fastify": "^10.2.10",
+    "@fastify/helmet": "11.1.1",
+    "@fastify/static": "6.12.0",
+    "@nestjs/common": "10.3.0",
+    "@nestjs/core": "10.3.0",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-fastify": "10.3.0",
     "@nestjs/swagger": "7.1.17",
-    "@nestjs/terminus": "^10.0.1",
-    "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/terminus": "10.2.0",
+    "@nestjs/typeorm": "10.0.1",
     "@nx/devkit": "17.1.2",
     "@saas-buildkit/nestjs-i18n": "11.1.3",
     "@softkit/async-storage": "^0.0.7",
@@ -95,31 +95,31 @@
     "@softkit/typeorm": "^0.4.13",
     "@softkit/typeorm-service": "^0.0.13",
     "@softkit/validation": "^0.3.4",
-    "@songkeys/nestjs-redis": "^10.0.0",
-    "axios": "^1.5.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "ioredis": "^5.3.2",
-    "nest-typed-config": "^2.9.1",
-    "nestjs-cls": "^3.5.1",
-    "nestjs-paginate": "^8.6.0",
-    "nestjs-pino": "^3.4.0",
-    "newrelic": "^11.1.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "passport-saml": "^3.2.4",
-    "pg": "^8.11.3",
-    "pino-http": "^8.5.0",
-    "pino-pretty": "^10.2.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1",
-    "ts-patch": "^3.0.2",
-    "tslib": "^2.6.2",
-    "typeorm": "~0.3.17",
-    "typeorm-extension": "^3.1.0",
-    "typeorm-naming-strategies": "^4.1.0",
-    "typeorm-transactional": "^0.4.1"
+    "@songkeys/nestjs-redis": "10.0.0",
+    "axios": "1.6.3",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
+    "ioredis": "5.3.2",
+    "nest-typed-config": "2.9.2",
+    "nestjs-cls": "3.6.0",
+    "nestjs-paginate": "8.6.0",
+    "nestjs-pino": "3.5.0",
+    "newrelic": "11.7.0",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
+    "passport-saml": "3.2.4",
+    "pg": "8.11.3",
+    "pino-http": "8.6.1",
+    "pino-pretty": "10.3.1",
+    "reflect-metadata": "0.1.14",
+    "rxjs": "7.8.1",
+    "ts-patch": "3.1.1",
+    "tslib": "2.6.2",
+    "typeorm": "0.3.17",
+    "typeorm-extension": "3.2.0",
+    "typeorm-naming-strategies": "4.1.0",
+    "typeorm-transactional": "0.4.1"
   },
   "nx": {
     "includedScripts": []
