fix: removed not needed libraries that included into libs from now on

--- a/apps/platform/.eslintrc.json
+++ b/apps/platform/.eslintrc.json
@@ -30,9 +30,7 @@
               "tslib",
               "pg",
               "reflect-metadata",
-              "rxjs",
-              "pino-http",
-              "pino-pretty"
+              "rxjs"
             ]
           }
         ]
