--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nx/plugin": "17.1.2",
     "@nx/webpack": "17.1.2",
     "@nx/workspace": "17.1.2",
+    "@openapitools/openapi-generator-cli": "^2.9.0",
     "@softkit/resource-plugin": "0.6.6",
     "@softkit/test-utils": "0.2.2",
     "@testcontainers/postgresql": "10.4.0",
