--- a/apps/platform/project.json
+++ b/apps/platform/project.json
@@ -14,7 +14,9 @@
     },
     "build": {
       "executor": "@nx/webpack:webpack",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
         "target": "node",
@@ -28,8 +30,13 @@
           {
             "name": "@nestjs/swagger/plugin",
             "options": {
-              "dtoFileNameSuffix": [".entity.ts", ".dto.ts"],
-              "controllerFileNameSuffix": [".controller.ts"],
+              "dtoFileNameSuffix": [
+                ".entity.ts",
+                ".dto.ts"
+              ],
+              "controllerFileNameSuffix": [
+                ".controller.ts"
+              ],
               "classValidatorShim": true,
               "dtoKeyOfComment": "description",
               "controllerKeyOfComment": "description",
@@ -74,7 +81,9 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
         "lintFilePatterns": [
           "apps/platform/**/*.ts",
@@ -85,7 +94,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/platform/jest.config.ts",
         "passWithNoTests": true
@@ -97,13 +108,27 @@
         }
       }
     },
+    "development": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": [
+          {
+            "command": "apps/platform/src/app/start-dev.sh platform"
+          }
+        ]
+      }
+    },
     "container": {
       "executor": "@nx-tools/nx-container:build",
-      "dependsOn": ["build"],
+      "dependsOn": [
+        "build"
+      ],
       "options": {
         "engine": "docker",
         "metadata": {
-          "images": ["platform"],
+          "images": [
+            "platform"
+          ],
           "load": true,
           "tags": [
             "type=schedule",
