--- a/apps/platform/src/app/assets/.env-dev.yaml
+++ b/apps/platform/src/app/assets/.env-dev.yaml
@@ -7,9 +7,8 @@ swagger:
 i18:
   paths:
     - i18n/
-    - ./node_modules/@softkit/validation/i18n/
-    - ./node_modules/@softkit/exceptions/i18n/
-
+    - ../../../node_modules/@softkit/validation/i18n/
+    - ../../../node_modules/@softkit/exceptions/i18n/
 
 db:
   runSeeds: true
