--- a/.github/workflows/pr_created.yml
+++ b/.github/workflows/pr_created.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Get affected projects
         id: get-affected-projects
-        run: echo "affected-projects=$(nx show projects --json --affected --type app --with-target build --base ${{ needs.prepare.outputs.base-name }}) >> $GITHUB_OUTPUT
+        run: echo "affected-projects=$(nx show projects --json --affected --type app --with-target build --base ${{ needs.prepare.outputs.base-name }})" >> $GITHUB_OUTPUT
 
   init-state-app:
     needs: [lint-and-run-tests, prepare]
