--- a/.github/workflows/pr_created.yml
+++ b/.github/workflows/pr_created.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Define envs information
         id: define-envs
         run: |
-            echo "environments='${{ startsWith(github.head_ref, 'release/') && vars.RELEASE_ENVIRONMENTS || vars.DEV_ENVIRONMENTS }}'" >> $GITHUB_OUTPUT
-            echo "base-name=${{ startsWith(github.head_ref, 'release/') && 'last_release' || 'origin/main' }}" >> $GITHUB_OUTPUT
+            echo environments='${{ startsWith(github.head_ref, 'release/') && vars.RELEASE_ENVIRONMENTS || vars.DEV_ENVIRONMENTS }}' >> $GITHUB_OUTPUT
+            echo base-name=${{ startsWith(github.head_ref, 'release/') && 'last_release' || 'origin/main' }} >> $GITHUB_OUTPUT
       - name: Debug
         run: |
-          echo "environments='${{ startsWith(github.head_ref, 'release/') && vars.RELEASE_ENVIRONMENTS || vars.DEV_ENVIRONMENTS }}'"
-          echo 'environments=\'${{ startsWith(github.head_ref, 'release/') && vars.RELEASE_ENVIRONMENTS || vars.DEV_ENVIRONMENTS }}\''
+          echo environments='${{ startsWith(github.head_ref, 'release/') && vars.RELEASE_ENVIRONMENTS || vars.DEV_ENVIRONMENTS }}' >> $GITHUB_OUTPUT
+          echo base-name=${{ startsWith(github.head_ref, 'release/') && 'last_release' || 'origin/main' }} >> $GITHUB_OUTPUT
           echo '${{ steps.define-envs.outputs.environments }}'
           echo '${{ steps.define-envs.outputs.base-name }}'
           echo '${{ vars.RELEASE_ENVIRONMENTS }}'
