--- a/.github/workflows/pr_created.yml
+++ b/.github/workflows/pr_created.yml
@@ -10,8 +10,8 @@ jobs:
   prepare:
     runs-on: ubuntu-latest
     outputs:
-      environments: '${{ steps.define-envs.outputs.environments }}'
-      base-name: '${{ steps.define-envs.outputs.base-name }}'
+      environments: ${{ steps.define-envs.outputs.environments }}
+      base-name: ${{ steps.define-envs.outputs.base-name }}
 
     steps:
       - name: Define envs information
@@ -19,22 +19,17 @@ jobs:
         run: |
             echo environments='${{ startsWith(github.head_ref, 'release/') && vars.RELEASE_ENVIRONMENTS || vars.DEV_ENVIRONMENTS }}' >> $GITHUB_OUTPUT
             echo base-name=${{ startsWith(github.head_ref, 'release/') && 'last_release' || 'origin/main' }} >> $GITHUB_OUTPUT
-      - name: Debug
-        run: |
-          echo environments='${{ startsWith(github.head_ref, 'release/') && vars.RELEASE_ENVIRONMENTS || vars.DEV_ENVIRONMENTS }}' >> $GITHUB_OUTPUT
-          echo base-name=${{ startsWith(github.head_ref, 'release/') && 'last_release' || 'origin/main' }} >> $GITHUB_OUTPUT
-          echo '${{ steps.define-envs.outputs.environments }}'
-          echo '${{ steps.define-envs.outputs.base-name }}'
-          echo '${{ vars.RELEASE_ENVIRONMENTS }}'
-          echo '${{ vars.DEV_ENVIRONMENTS }}'
-
 
   lint-and-run-tests:
     needs: [prepare]
     runs-on: ubuntu-latest
     outputs:
-        affected-projects: '${{ steps.get-affected-projects.outputs.affected-projects }}'
+        affected-projects: ${{ steps.get-affected-projects.outputs.affected-projects }}
     steps:
+      - name: Debug
+        run:
+          echo '${{ needs.prepare.outputs.base-name }}'
+          echo '${{ needs.prepare.outputs.environments }}'
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
@@ -58,11 +53,11 @@ jobs:
         run: npx nx affected:build --base="${{ needs.prepare.outputs.base-name }}"
 
       - name: Tests coverage
-        run: npx nx affected:test --base="${{ needs.prepare.outputs.base-name }}" --codeCoverage --parallel=false
+        run: npx nx affected:test --base="${{ needs.prepare.outputs.base-name }}" --codeCoverage
 
       - name: Get affected projects
         id: get-affected-projects
-        run: echo 'affected-projects=$(nx show projects --json --affected --type app --with-target build --base ${{ needs.prepare.outputs.base-name }})' >> $GITHUB_OUTPUT
+        run: echo affected-projects='$(nx show projects --json --affected --type app --with-target build --base ${{ needs.prepare.outputs.base-name }})' >> $GITHUB_OUTPUT
 
   init-state-app:
     needs: [lint-and-run-tests, prepare]
