ci: fixed affected running with npx

--- a/.github/workflows/pr_created.yml
+++ b/.github/workflows/pr_created.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Get affected projects
         id: get-affected-projects
-        run: echo affected-projects='$(nx show projects --json --affected --type app --with-target build --base ${{ needs.prepare.outputs.base-name }})' >> $GITHUB_OUTPUT
+        run: echo affected-projects='$(npx nx show projects --json --affected --type app --with-target build --base ${{ needs.prepare.outputs.base-name }})' >> $GITHUB_OUTPUT
 
       - name: Debug affected projects
         run: |
