ci: removed quotes

--- a/.github/workflows/pr_created.yml
+++ b/.github/workflows/pr_created.yml
@@ -53,16 +53,7 @@ jobs:
 
       - name: Get affected projects
         id: get-affected-projects
-        run: echo affected-projects='$(npx nx show projects --json --affected --type app --with-target build --base ${{ needs.prepare.outputs.base-name }})' >> $GITHUB_OUTPUT
-
-      - name: Debug affected projects
-        run: echo ${{ steps.get-affected-projects.outputs.affected-projects }}
-
-      - name: Debug affected projects 2
-        run: echo '${{ steps.get-affected-projects.outputs.affected-projects }}'
-
-
-
+        run: echo affected-projects=$(npx nx show projects --json --affected --type app --with-target build --base ${{ needs.prepare.outputs.base-name }}) >> $GITHUB_OUTPUT
 
   init-state-app:
     needs: [lint-and-run-tests, prepare]
