--- a/.github/workflows/pr_created.yml
+++ b/.github/workflows/pr_created.yml
@@ -1,5 +1,10 @@
 name: PR on main
 
+permissions:
+  contents: write
+  pull-requests: write
+  id-token: write
+
 on:
   pull_request:
     branches:
