--- a/.github/workflows/build-and-deploy-apps.yml
+++ b/.github/workflows/build-and-deploy-apps.yml
@@ -130,7 +130,7 @@ jobs:
       environment: ${{ needs.prepare.outputs.environment }}
       ecs-cluster-name: format("{0}-{1}", github.event.repository.owner.login, needs.prepare.outputs.environment)
       ecs-service-name: format("{0}-{1}-{2}-{3}", github.event.repository.owner.login, needs.prepare.outputs.environment, github.event.repository.name, matrix.project)
-      ecr-repository-name: format("{0}-{1}", github.event.repository.name, matrix.project)
+      container-name: format("{0}-{1}", github.event.repository.name, matrix.project)
       image: format("{0}/{1}-{2}:{3}", needs.prepare.outputs.docker-url, vars.DEPLOYMENT_AWS_ACCOUNT_REGION, github.event.repository.name, matrix.project, needs.prepare.outputs.image-tag)
     secrets: inherit
 
