ci: added additional artifact

--- a/.github/workflows/build-and-deploy-apps.yml
+++ b/.github/workflows/build-and-deploy-apps.yml
@@ -119,6 +119,7 @@ jobs:
       ecr-repository-name: ${{ github.event.repository.name }}-${{ matrix.project }}
       image-tag: ${{ needs.prepare.outputs.image-tag }}
       docker-file-path: apps/${{ matrix.project }}
+      additional-artifact: build
       deployment-account-id: ${{ vars.DEPLOYMENT_AWS_ACCOUNT_ID }}
     secrets: inherit
 
