--- a/apps/platform/Dockerfile
+++ b/apps/platform/Dockerfile
@@ -1,12 +1,12 @@
 # Install dependencies only when needed
 FROM docker.io/node:20-alpine as deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-RUN apk add --no-cache libc6-compat
+RUN apk add --no-cache libc6-compat g++ make py3-pip
 WORKDIR /usr/src/app
 COPY dist/apps/platform/package*.json ./
 COPY dist/apps/platform/yarn.lock ./
-COPY .yarnrc.yml ./.yarnrc.yml
-COPY .yarn ./.yarn
+COPY .yarnrc.yml .yarnrc.yml
+COPY .yarn/ .yarn/
 RUN yarn install
 
 # Production image, copy all the files and run nest
