--- a/.github/workflows/build-and-deploy-apps.yml
+++ b/.github/workflows/build-and-deploy-apps.yml
@@ -77,7 +77,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build
-          path: dist/
+          path: dist
+          if-no-files-found: error
 
       - name: Get affected projects
         id: get-affected-projects
