--- a/.github/workflows/build-and-deploy-apps.yml
+++ b/.github/workflows/build-and-deploy-apps.yml
@@ -77,7 +77,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build
-          path: dist
+          path: |
+            ./dist
+#            readme needed because of limitation of upload artifact action
+#            https://github.com/actions/upload-artifact/issues/174
+            ./README.md
           if-no-files-found: error
 
       - name: Get affected projects
