--- a/.github/workflows/build-and-deploy-apps.yml
+++ b/.github/workflows/build-and-deploy-apps.yml
@@ -139,6 +139,7 @@ jobs:
       ecs-cluster-name: ${{ format('{0}-{1}', github.event.repository.owner.login, needs.prepare.outputs.environment) }}
       ecs-service-name: ${{ format('{0}-{1}-{2}-{3}', github.event.repository.owner.login, needs.prepare.outputs.environment, github.event.repository.name, matrix.project) }}
       ecr-repository-name: ${{ format('{0}-{1}', github.event.repository.name, matrix.project) }}
+      ecr-repository-account-id: ${{ vars.DEPLOYMENT_AWS_ACCOUNT_ID }}
       container-name: ${{ format('{0}-{1}', github.event.repository.name, matrix.project) }}
       image-tag: ${{ needs.prepare.outputs.image-tag }}
       image: ${{ format('{0}/{1}-{2}:{3}', needs.prepare.outputs.docker-url, github.event.repository.name, matrix.project, needs.prepare.outputs.image-tag) }}
